import { Controller } from '@nestjs/common';
import { GrpcMethod, RpcException } from '@nestjs/microservices';
import { status } from '@grpc/grpc-js';
import { ShortenerService } from './shortener.service';


@Controller()
export class ShortenerController {
  constructor(private readonly shortenerService: ShortenerService) {}

  @GrpcMethod('ShortenerService', 'CreateShortUrl')
  async createShortUrl(data: CreateShortUrlRequest): Promise<CreateShortUrlResponse> {
    console.log('=== SHORTENER SERVICE DEBUG ===');
    console.log('üì® Raw data received:', data);
    console.log('üì® JSON stringify:', JSON.stringify(data, null, 2));
    console.log('üì® data.originalUrl:', data?.originalUrl); 
    
    if (!data.originalUrl) { 
      console.error('‚ùå Validation failed - originalUrl is missing');
      throw new RpcException({
        code: status.INVALID_ARGUMENT,
        message: 'originalUrl is required',
      });
    }

    try {
      const result = await this.shortenerService.createShortUrl(data.originalUrl);  
      console.log('‚úÖ CreateShortUrl response:', result);
      
      return {
        shortCode: result.shortCode, 
        shortUrl: result.shortUrl,    
      };
    } catch (error) {
      console.error('‚ùå CreateShortUrl error:', error);
      throw new RpcException({
        code: status.INTERNAL,
        message: 'Failed to create short URL',
      });
    }
  }

  @GrpcMethod('ShortenerService', 'GetOriginalUrl')
  async getOriginalUrl(data: GetOriginalUrlRequest): Promise<GetOriginalUrlResponse> {
    console.log('üì® GetOriginalUrl request:', data);
    
    if (!data.shortCode) { 
      throw new RpcException({
        code: status.INVALID_ARGUMENT,
        message: 'shortCode is required',
      });
    }

    try {
      const originalUrl = await this.shortenerService.getOriginalUrl(data.shortCode);  // ‚Üê ƒê·ªïi th√†nh camelCase
      console.log('‚úÖ GetOriginalUrl response:', { originalUrl });
      
      return { originalUrl };  
    } catch (error) {
      console.error('‚ùå GetOriginalUrl error:', error);
      throw new RpcException({
        code: status.NOT_FOUND,
        message: 'URL not found',
      });
    }
  }
}